syntax = "proto3";

package cart;

option go_package = "./;cart";

service Cart {
	rpc AddCart(CartInfo) returns (ResponseAdd) {} //添加商品到购物车
	rpc CleanCart(Clean) returns (Response) {} //清空购物车
	rpc Incr(Item) returns (Response) {} //添加商品数量
	rpc Decr(Item) returns (Response) {} //减少商品数量
	rpc DeleteItemByID(CartID) returns (Response) {} //删除购物车
	rpc GetAll(CartFindAll) returns (CartAll) {}
}

message CartInfo{
	int64 id = 1;
	int64 user_id = 2;
	int64 product_id = 3;
	int64 size_id = 4;
	int64 num = 5;
}

message ResponseAdd {
	int64 cart_id = 1;
	string msg = 2;
}

message Clean {
	int64 user_id = 1;
}

message Response {
	string msg = 1;
}

message Item {
	int64  id = 1;
	int64 change_num = 2;
}

message CartID {
	int64 id = 1;
}

message CartFindAll {
	int64 user_id = 1;
}

message CartAll {
	repeated CartInfo cart_info = 1;
}